avoid break inside a paragraph

--- a/src/assets/styles/_elements.grouping.css
+++ b/src/assets/styles/_elements.grouping.css
@@ -2,19 +2,14 @@
    #GROUPING
    ========================================================================== */
 
-
 /**
  * Grouping
- *
- * https://html.spec.whatwg.org/multipage/grouping-content.html
  */
 
+/* -------------------------------------
+   # P
+   ------------------------------------- */
 
-
-/* -----------------------------------
-   # Figure
-   ----------------------------------- */
-
-figure {
+p {
   @extend .u-break-inside-avoid;
 }
